<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_ecore"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUsername"
        style="@style/TextInforField"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:hint="@string/prompt_email"
        android:padding="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintVertical_bias="0.075"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/edtMobile"
        style="@style/TextInforField"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/prompt_password"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtUsername" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="340dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:text="@string/action_sign_in"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtMobile" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/edtMobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <CheckBox
        android:id="@+id/cbRememberPass"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:button="@drawable/custom_checkbox"
        app:layout_constraintLeft_toLeftOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/tvRememberPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_pass"
        style="@style/TextInforField"
        android:layout_marginLeft="3dp"
        app:layout_constraintLeft_toRightOf="@id/cbRememberPass"
        app:layout_constraintTop_toTopOf="@id/cbRememberPass" />

    <TextView
        android:id="@+id/tvForgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pass"
        style="@style/TextInforField"
        android:layout_marginRight="3dp"
        app:layout_constraintRight_toRightOf="@id/btnLogin"
        app:layout_constraintTop_toTopOf="@id/tvRememberPass" />

    <TextView
        android:id="@+id/tvBarChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barchart"
        style="@style/TextInforField"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/cbRememberPass"
        app:layout_constraintTop_toBottomOf="@id/tvRememberPass"/>

    <TextView
        android:id="@+id/tvQrCodeScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qrcode"
        style="@style/TextInforField"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="@id/tvForgetPass"
        app:layout_constraintTop_toBottomOf="@id/tvRememberPass"/>

    <TextView
        android:id="@+id/tvFirebase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firebase"
        style="@style/TextInforField"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/cbRememberPass"
        app:layout_constraintTop_toBottomOf="@id/tvBarChart"/>

    <TextView
        android:id="@+id/tvWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        style="@style/TextInforField"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="@id/tvForgetPass"
        app:layout_constraintTop_toBottomOf="@id/tvQrCodeScan"/>

    <View
        android:id="@+id/view"
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:background="@color/button_click"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbRememberPass"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvNoAccount"
            style="@style/TextInforField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/no_account" />

        <TextView
            android:id="@+id/tvRegister"
            style="@style/TextInforField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:text="@string/register"
            android:textAllCaps="true" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>